<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MatrikelNummerLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <EditText
        android:id="@+id/matrikelNummerInput"
        android:layout_width="255dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/MatrikelNummerPlaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/serverAntwort"
        android:layout_width="278dp"
        android:layout_height="76dp"
        android:text="@string/ServerAntwortLabel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matrikelNummerInput"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/btnAbschicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSubmit"
        android:text="@string/ButtonLabelAbschicken"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverAntwort"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/btnBerechnen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/ButtonLabelBerechnen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbschicken"
        app:layout_constraintVertical_bias="0.069" />

</androidx.constraintlayout.widget.ConstraintLayout>